arm templates/resources/Networking/NSG/RegionalDataBrickNSG.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": { 
    "location": {
      "type": "string",
      "defaultValue": "EastUS",
      "metadata": {
        "description": "The Azure region for this deployment"
      }
    },
    "environment": {
      "type": "string",
      "defaultValue": "Dev",
      "metadata": {
        "description": "The abbreviated environment label"
      }
    },
    "region": {
      "type": "string",
      "defaultValue": "AM",
      "metadata": {
        "description": "The abbreviated Azure Region code"
      }
    },
    "nsgName": {
      "type": "string",
      "metadata": {
        "description": "The abbreviated Azure Region code"
      }
    }
  },
  "variables": {
  },
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('nsgName')]",
      "apiVersion": "2017-10-01",
      "location": "[parameters('location')]",
      "tags": {
          "BusinessOwner": "Erik Epstein",
          "CostCenter": "9943058392",
          "Department": "Products and Platforms",
          "Environment": "[parameters('environment')]",
          "Location": "[parameters('location')]",
          "PrimaryFunction": "Regional DataBrick NSGs Infrastructure for Subnet Automation",
          "Region": "[parameters('region')]"
      },
      "properties": {
        "securityRules": [
          {
            "name": "databricks-control-plane-ssh",
            "properties": {
              "description": "Required for Databricks control plane management of worker nodes.",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "51.140.203.27/32",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "databricks-control-plane-worker-proxy",
            "properties": {
              "description": "Required for Databricks control plane communication with worker nodes.",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "5557",
              "sourceAddressPrefix": "51.140.203.27/32",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 110,
              "direction": "Inbound"
              }
          },
          {
            "name": "databricks-worker-to-worker",
            "properties": {
              "description": "Required for worker nodes communication within a cluster.",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 200,
              "direction": "Inbound"
              }
          },
          {
            "name": "databricks-worker-to-webapp",
            "properties": {
              "description": "Required for workers communication with Databricks Webapp.",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "51.140.204.4/32",
              "access": "Allow",
              "priority": 100,
              "direction": "Outbound"
              }
          },
          {
            "name": "databricks-worker-to-sql",
            "properties": {
              "description": "Required for workers communication with Azure SQL services.",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Sql",
              "access": "Allow",
              "priority": 110,
              "direction": "Outbound"
              }
          },
          {
            "name": "databricks-worker-to-storage",
            "properties": {
              "description": "Required for workers communication with Azure Storage services.",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Storage",
              "access": "Allow",
              "priority": 120,
              "direction": "Outbound"
            }
          },
          {
            "name": "databricks-worker-to-worker-outbound",
            "properties": {
              "description": "Required for worker nodes communication within a cluster.",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 130,
              "direction": "Outbound"
            }
          },
          {
            "name": "databricks-worker-to-any",
            "properties": {
              "description": "Required for worker nodes communication with any destination.",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 140,
              "direction": "Outbound"
            }
          }  
        ]
      }
    }
  ]
}
